# sync

./: .clang-format  .clang-tidy  .dockerignore  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.zig
cli/: Cargo.toml
lib/: CMakeLists.txt  Cargo.toml  build.rs
lib/src/: core.h  doctest.h  lib.rs  lib.zig  sync_native.cpp  test.cpp  test.zig  tests.zig
lib/src/compiler/: compile_error.hpp  compile_info.cpp  compile_info.hpp  compiler.cpp  compiler.hpp  compiler_internal.hpp  module.cpp  module.hpp  source_tree.cpp  source_tree.hpp
lib/src/compiler/borrow_check/: README.md
lib/src/compiler/graph/: module_dependency_graph.cpp  module_dependency_graph.hpp  scope.cpp  scope.hpp
lib/src/compiler/parser/: ast.cpp  ast.hpp  base_nodes.cpp  base_nodes.hpp  expression.cpp  expression.hpp  parser.cpp  parser.hpp  stack_variables.cpp  stack_variables.hpp  type_resolution.cpp  type_resolution.hpp
lib/src/compiler/source_tree/: README.md  file_type.hpp  source_tree.cpp  source_tree.hpp  tree_impl.cpp  tree_impl.hpp
lib/src/compiler/tokenizer/: README.md  file_literals.cpp  file_literals.hpp  token.cpp  token.hpp  tokenizer.cpp  tokenizer.hpp
lib/src/core/: core.c  core.h  core_internal.h  exceptional.cpp  exceptional.h  exceptional.hpp
lib/src/core/builtin_functions/: sort.cpp  sort.hpp
lib/src/core/builtin_traits/: builtin_traits.h  builtin_traits.hpp  iterator.cpp  iterator.hpp
lib/src/interpreter/: bytecode.cpp  bytecode.hpp  function_builder.cpp  function_builder.hpp  interpreter.cpp  interpreter.hpp  primitive_tag.cpp  primitive_tag.hpp  stack.cpp  stack.hpp
lib/src/interpreter/stack/: frame.cpp  frame.hpp  node.cpp  node.hpp  stack.cpp  stack.hpp
lib/src/mem/: alloc_expect.hpp  allocator.cpp  allocator.h  allocator.hpp  allocator.rs  allocator.zig  mod.rs  os_mem.cpp  os_mem.hpp  protected_allocator.cpp  protected_allocator.hpp
lib/src/program/: module_info.hpp  program.cpp  program.h  program.hpp  program_error.cpp  program_error.h  program_error.hpp  program_internal.hpp
lib/src/simd/: simd.cpp  simd.hpp  simd_avx2.cpp  simd_avx512.cpp  simd_neon.cpp  simd_rvv.cpp  simd_sse2.cpp  simd_sse42.cpp  simd_sve.cpp  simd_wasm.cpp
lib/src/testing/: README.md  assert_handler.cpp  assert_handler.hpp  child_process.cpp  child_process.hpp  doctest.cpp
lib/src/threading/: alloc_cache_align.hpp  sync_obj_val.cpp  sync_obj_val.hpp  sync_queue.cpp  sync_queue.h  sync_queue.hpp
lib/src/threading/generation/: gen_pool.cpp  gen_pool.h  gen_pool.hpp  gen_pool_internal.cpp  gen_pool_internal.hpp
lib/src/threading/locks/: locks_internal.cpp  locks_internal.hpp  rwlock.cpp  rwlock.h  rwlock.hpp
lib/src/types/: primitive_reflect_types.cpp  reflect_fwd.hpp  template_type_operations.hpp  type.cpp  type.h  type.hpp  type_c_compat.cpp  type_info.cpp  type_info.h  type_info.hpp  type_info.rs  type_info.zig
lib/src/types/anyerror/: anyerror.cpp  anyerror.hpp
lib/src/types/array/: dynamic_array.cpp  dynamic_array.h  dynamic_array.hpp  list.cpp  list.h  list.hpp  slice.cpp  slice.hpp
lib/src/types/box/: box.cpp  box.hpp
lib/src/types/function/: function.cpp  function.h  function.hpp  function_align.h
lib/src/types/hash/: groups.cpp  groups.hpp  map.cpp  map.hpp
lib/src/types/option/: option.cpp  option.hpp
lib/src/types/ordering/: ordering.h  ordering.hpp
lib/src/types/result/: result.cpp  result.hpp
lib/src/types/string/: char.hpp  string.cpp  string.h  string.hpp  string_internal.cpp  string_internal.hpp  string_slice.cpp  string_slice.h  string_slice.hpp
lib/src/types/sync_obj/: sync_obj.cpp  sync_obj.h  sync_obj.hpp
lib/src/types/task/: task.cpp  task.hpp
lib/src/util/: align.hpp  assert.hpp  debug.hpp  ffi.cpp  ffi.hpp  move_and_leak.hpp  os_callstack.cpp  os_callstack.hpp  panic.cpp  panic.hpp  pow_of_2.hpp  simd.cpp  simd.hpp  unreachable.hpp
lib/test/: CMakeLists.txt  example.cpp  main.cpp  test.cpp  test_runner.cpp  test_runner.h
lib/test/ios/: Info.plist.in
test/: CMakeLists.txt  llm_analysis.py  llm_anaysis.py  run_tests.py  sandbox.sb
test/core/filesystem/: filesystem_get_file_size_this_file_small.cpp
test/core/rwlock/: rwlock_fail_destroy_on_shared_lock.cpp  rwlock_init_destroy.cpp  rwlock_one_thread_elevate_lock.cpp  rwlock_one_thread_exclusive.cpp  rwlock_one_thread_reenter_exclusive.cpp  rwlock_one_thread_reenter_shared.cpp  rwlock_one_thread_shared.cpp  rwlock_stress_many_readers.cpp  rwlock_stress_mixed_workload.cpp  rwlock_three_thread_deadlock.cpp  rwlock_two_thread_deadlock.cpp  rwlock_two_thread_exclusive.cpp  rwlock_two_thread_no_elevate.cpp  rwlock_two_thread_shared.cpp  rwlock_two_thread_success_elevate.cpp
test/docker/: run_docker_tests.sh  ubuntu-arm64.Dockerfile  ubuntu-riscv64.Dockerfile  ubuntu-x64.Dockerfile  ubuntu.Dockerfile  wasm.Dockerfile
test/freebsd/: freebsd-x64-toolchain.cmake
test/lib/: test_main.cpp
test/lib/unit_tests/: gen_pool.cpp  rwlock.cpp  string.cpp
test/lib_tests/core/filesystem/: filesystem_get_file_size_not_a_file.cpp  filesystem_get_file_size_this_file_bigger.cpp  filesystem_get_file_size_this_file_small.cpp  filesystem_relative_to_absolute_dir.cpp
test/lib_tests/core/rwlock/: rwlock_array_reallocation.cpp  rwlock_deadlock_late_arrival.cpp  rwlock_deadlock_rapid_retry.cpp  rwlock_deep_reentrance.cpp  rwlock_exclusive_to_shared_multithread.cpp  rwlock_one_thread_elevate_lock.cpp  rwlock_one_thread_exclusive.cpp  rwlock_one_thread_reenter_exclusive.cpp  rwlock_one_thread_reenter_shared.cpp  rwlock_one_thread_shared.cpp  rwlock_stress_many_readers.cpp  rwlock_stress_mixed_workload.cpp  rwlock_three_thread_deadlock.cpp  rwlock_try_acquire_behavior.cpp  rwlock_two_thread_deadlock.cpp  rwlock_two_thread_exclusive.cpp  (+3 more)
test/vci/: mac_arm64.yml  mac_x64.yml  static_analysis.yml  ubuntu_arm64.yml  ubuntu_x64.yml  wasm.yml  windows_arm64.yml  windows_x64.yml
test/virtci/: mac_arm64.yml  mac_x64.yml  static_analysis.yml  ubuntu_arm64.yml  ubuntu_x64.yml  wasm.yml  windows_arm64.yml  windows_x64.yml
(+40 files in other folders)
